v0.11
	* ADD :  special value "_NULL_" to TagSelector; matches non-existent or empty tag
	* FIX : allow punctuation in tag selector
	* ADD : "not", "true", "false", "[Default]" keywords to the Tag Selector; "[Default]" specifies the style for features not having a specific (i.e. non-default) style selected. Together with "Type Is", allows for "bug-fixing" styles "a la Maplint"
	* ADD : Implementation of a binary OSM file format targeted to mobile devices (*.osb); so far, is ~3x smaller and loads ~5x faster; format subject to changes and documentation
	* FIX : pixmap from background images were not freed, leading to ever growing memory consumption
	* FIX : problem with map adapters having limited zoom range (e.g. Maplint 12-16)
	* ADD : Style tag selector by type (e.g "Type is TrackPoint") and presence of tags (e.g. "HasTags"). Allows: 1) To show a generic icon for POI; 2) To display an icon for "lost" points with no roads nor tags.
	* ADD : clipboard-copy-paste support (Tags only for now). Clipboard format is xml OSM.
	* ADD : "export selected to OSM"
	* ADD : Proxy support to SlippyMapWidget + change the kind of download only when interacting with the slippy map
	* ADD : when deleting roads, ask if nodes should be deleted also
	* ADD : "View downloaded area": "dot" the areas not downloaded from OSM during the current session
	* ADD : Save position of last edit session on exit
	* ADD : Split a road by selecting only the node
	* ADD : Arrow keys move the map (by Rainer Keller)
	* FIX : when cascade removing, not all children are deleted if they are present multiple times + avoid having twice the same node contiguous in the a road/relation
	* FIX : segfault with MDC containing history where a feature is created and deleted 
	* ADD : "Dirty" layer where all modified features go
	* ADD : "Undo" dock with all undo actions
	* FIX : Start new road from selected node
	* FIX : German translation
	* ADD : Czech translation (Tom Mika)
	* FIX : History window now displays UTF8