@@ -1,4 +1,5 @@
 v0.11
+	* FIX : "Dynamically" display all built-in styles in the preferences dialog rather than pre-defined ones
 	* ADD :  special value "_NULL_" to TagSelector; matches non-existent or empty tag
 	* FIX : allow punctuation in tag selector
 	* ADD : "not", "true", "false", "[Default]" keywords to the Tag Selector; "[Default]" specifies the style for features not having a specific (i.e. non-default) style selected. Together with "Type Is", allows for "bug-fixing" styles "a la Maplint"
